fix z-index detailed comp

--- a/spot-web/src/app/components/main/post-detail/post-detail.component.scss
+++ b/spot-web/src/app/components/main/post-detail/post-detail.component.scss
@@ -3,6 +3,7 @@
 
 spot-main-nav {
   position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
   width: 100%;
